TODO::
  ? DSP::Clock_ptr => migrate to std::shared_ptr
  update Linux makefile
  !!! Add TELEsound and PiAPS_sound projects to GitLab and start addaptation to new library version

LAST DONE:


CHANGES:
- ver. 0.20.001 - <b>2021.04.03</b> Changed: 
  - DSP_libver, DSP_lib_version and DSP_lib_version_string moved int o DSP:: namespace: DSP::libver, DSP::lib_version and DSP::lib_version_string
  - moved enums into DSP::e:: namespace: DSPe_* => DSP::e::*
  - slight modifications in enum types names: DSPe_offset_mode => DSP::e::OffsetMode, DSPe_Modulation_type => DSP::e::ModulationType, DSPe_buffer_type => DSP::e::BufferType

- ver. 0.20.000 - <b>2021.04.02</b> Changed: 
  - all DSPu_ moved into DSP::u:: namespace with some capitalization changes in blocks names
  - DSP_modules.cpp - removed some of the uses of new and delete
  - DSPu_callback_ptr, DSPu_buffer_callback_ptr, DSPu_notify_callback_ptr => DSP::Callback_ptr, DSP::Buffer_callback_ptr, DSP::Notify_callback_ptr
  - DSP::Rand => DSP::Randomization
  - DSP::u::rand, DSP::u::binrand => DSP::u::Rand, DSP::u::BinRand
  - removed uses of BYTE, WORD, DWORD, MAXDWORD and MAXWORD
  - added additional processign cycles in asynchronous.cpp and callback.cpp examples to avoid audio truncation 
  - replaces test_wav with DSPElib.wav
  - DSPu_FIR use now vectors instead of pointers as input parameters

- ver. 0.19.024 - <b>2021.04.01</b> Changed: 
  - DSPu_AudioInput, DSPu_AudioOutput moved into DSP::u:: namespace DSP::u::AudioInput, DSP::u::AudioOutput
  - DSPu_SOCKETinput, DSPu_SOCKEToutput moved into DSP::u:: namespace DSP::u::SOCKETinput, DSP::u::SOCKEToutput
  - DSP_socket moved into DSP namespace DSP::Socket
  - DSPe_AudioBufferType => DSP::e::AudioBufferType
  - DSP_IO.h changed several defines into consts and moved them into DSP namespace, e.g. DSP_file_buffer_size => DSP::File_buffer_size

- ver. 0.19.023 - <b>2021.04.01</b> Changed: 
  - change of examples wav file 